--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
