--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,6 @@ build-licensight-scan:
     - echo "repository name is $CI_PROJECT_NAME"
     - echo "push SBOM to licensight"
     - echo "show DecoratePullRequest $CI_API_V4_URL"
-    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr $CI_API_V4_URL -gat $GITLAB_ACCESS_TOKEN -btb true
+    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr true -gat $GITLAB_ACCESS_TOKEN -btb true
   rules:
     - if: '$CI_COMMIT_BRANCH'
