--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build-licensight-scan:
     - chmod +x ./licensight-scan
     - echo "repository name is $CI_PROJECT_NAME"
     - echo "push SBOM to licensight"
-    - echo "show DecoratePullRequest $CI_API_V4_URL"
+    - echo "show DecoratePullRequest $CI_API_V4_URL $CI_MERGE_REQUEST_IID"
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr true -gat $GITLAB_ACCESS_TOKEN -btb true
   rules:
     - if: '$CI_COMMIT_BRANCH'
