--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,10 @@ build-licensight-file:
     - if: '$CI_PIPELINE_SOURCE == "aaaaaa"'
 
 
-
+variables:
+  GITLAB_SERVER: "https://gitlab.com"
+  CI_API_V4_URL: "$GITLAB_SERVER/$CI_PROJECT_PATH/-/merge_requests/1"
+  CI_MERGE_REQUEST_IID: ""
 
 build-licensight-scan:
   stage: build
