--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,7 @@ build-licensight-file:
 
 variables:
   GITLAB_SERVER: "https://gitlab.com"
-#  CI_API_V4_URL: "$GITLAB_SERVER/$CI_PROJECT_PATH/-/merge_requests"
-#  CI_MERGE_REQUEST_IID: "$CI_MERGE_REQUEST_IID"
+  CI_API_V4_URL: "$GITLAB_SERVER/$CI_PROJECT_PATH/-/merge_requests"
 
 build-licensight-scan:
   stage: build
