--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,9 @@ build-licensight-scan:
     - echo "install licensight-scan"
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
     - chmod +x ./licensight-scan
-    - echo "repository name is $CI_PROJECT_NAME"
+    - echo "branch name is $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
     - echo "push SBOM to licensight"
     - echo "show DecoratePullRequest $CI_API_V4_URL $CI_MERGE_REQUEST_IID"
-    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY
+    - ./licensight-scan generate -d . -b $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr true -gat $GITLAB_ACCESS_TOKEN -btb true
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
