--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,6 @@ build-licensight-file:
 
 variables:
   GITLAB_SERVER: "https://gitlab.com"
-  CI_API_V4_URL: "$GITLAB_SERVER/$CI_PROJECT_PATH/-/merge_requests/"
 
 build-licensight-scan:
   image: maven:3.8-openjdk-11
@@ -28,6 +27,6 @@ build-licensight-scan:
     - echo "branch name is $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
     - echo "push SBOM to licensight"
     - echo "show DecoratePullRequest $CI_API_V4_URL $CI_MERGE_REQUEST_IID"
-    - ./licensight-scan generate -d . -b $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr true -gat $GITLAB_ACCESS_TOKEN
+    - ./licensight-scan generate -d . -b $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr true -gat $GITLAB_ACCESS_TOKEN -btb true
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
