--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
 
       - name: Install licensight-file
         run: |
-          echo "GITHUB_ACTIONS ${{GITHUB_ACTIONS}}"
+          if [ "$GITHUB_ACTIONS" == "true" ]; then
+            echo "This is a GitHub Actions pipeline"
+          fi
           echo "PR URL is ${{ github.event.pull_request.html_url }}" | echo "PR URL: https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}"
           echo "API comment URL: https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
           echo "install licensight-file"
