update github ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,11 @@ jobs:
           if [ "$GITHUB_ACTIONS" == "true" ]; then
             echo "This is a GitHub Actions pipeline"
           fi
-          
+          env:
+          ${{ github.event.pull_request.number }}
           echo "echo"
+          echo "GITHUB_REF $GITHUB_REF"
+          echo "GITHUB_REF_NAME $GITHUB_REF_NAME"
           echo "GITHUB_EVENT_PATH $GITHUB_EVENT_PATH"
           cat "$GITHUB_EVENT_PATH"
           echo "server_url ${{ github.api_url }}"
