--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+variables:
+  GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
 stages:
   - build
 
@@ -24,7 +26,7 @@ build-licensight-scan:
     - echo "branch name is $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
     - echo "push SBOM to licensight"
     - echo "show DecoratePullRequest $CI_API_V4_URL $CI_MERGE_REQUEST_IID"
-    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr true -gat $CI_JOB_TOKEN -b $CI_COMMIT_REF_NAME
+    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
 
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
