update github ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
 
-#env:
-#  GITHUB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
+env:
+  GITHUB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
 
 jobs:
   build-licensight:
