--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,29 +1,35 @@
 stages:
   - build
 
-build-licensight-file:
+install-licensight-file:
   stage: build
   script:
     - echo "install licensight-file"
-    - curl -O https://licensight-v2.s3.eu-central-1.amazonaws.com/latest/linux/licensight-file
+    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan
     - chmod +x ./licensight-file
-    - echo "repository name is $CI_PROJECT_NAME"
-    - echo "push SBOM to licensight"
-    - ./licensight-file generate ./ -a $PROJECT_NAME -p demo -e $ENV -t $SECRET_KEY
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "aaaaaa"'
 
-
-build-licensight-scan:
+build-licensight-scan-without-access-token:
   image: maven:3.8-openjdk-11
   stage: build
   script:
-    - echo "install licensight-scan"
-    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
-    - chmod +x ./licensight-scan
-    - echo "branch name is $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
-    - echo "push SBOM to licensight"
-    - echo "show DecoratePullRequest $CI_API_V4_URL $CI_MERGE_REQUEST_IID"
-    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr true -gat $GITLAB_ACCESS_TOKEN -btb true
+    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
+  rules:
+    - if: '$CI_MERGE_REQUEST_IID'
+
+build-licensight-scan-with-access-token:
+  stage: build
+  variables:
+    GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
+  script:
+    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
+  rules:
+    - if: '$CI_MERGE_REQUEST_IID'
+
+build-licensight-scan-with-gat:
+  stage: build
+  variables:
+    GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
+  script:
+    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
