--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ install-licensight-file:
     - echo "install licensight-file"
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan
     - chmod +x ./licensight-file
+  rules:
+    - if: '$CI_MERGE_REQUEST_IID'
 
 build-licensight-scan-without-access-token:
   image: maven:3.8-openjdk-11
