--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ install-licensight-file:
   script:
     - echo "install licensight-file"
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan
-    - chmod +x ./licensight-file
+    - chmod +x ./licensight-scan
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
 
@@ -15,6 +15,8 @@ build-licensight-scan-without-access-token:
   stage: build
   script:
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
+  needs:
+    - install-licensight-file
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
 
@@ -24,6 +26,8 @@ build-licensight-scan-with-access-token:
     GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
   script:
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
+  needs:
+    - install-licensight-file
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
 
@@ -33,5 +37,7 @@ build-licensight-scan-with-gat:
     GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
   script:
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
+  needs:
+    - install-licensight-file
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
