--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,12 @@ on:
       - main
 
 jobs:
-  build-licensight:
+  build-licensight-scan-without-access-token:
+    needs: intall-licensight-scan
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Install licensight-file
         run: |
           echo "install licensight-file"
@@ -22,7 +22,18 @@ jobs:
         run: |
           ./licensight-scan generate -d . -a ${{ secrets.PROJECT_NAME }} -e ${{ secrets.ENV }} -at ${{ secrets.SECRET_KEY }} -dpr -b $CI_COMMIT_REF_NAME
 
-      - name: build-licensight-scan-with-access-token
+  build-licensight-scan-with-access-token:
+    needs: intall-licensight-scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install licensight-file
+        run: |
+          echo "install licensight-file"
+          curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan
+          chmod +x ./licensight-scan
+      - name: build-licensight-scan-without-access-token
         env:
           GITHUB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
         run: |
