--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ install-licensight-file:
     - if: '$CI_MERGE_REQUEST_IID'
 
 build-licensight-scan-without-access-token:
-  image: maven:3.8-openjdk-11
   stage: build
   script:
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
@@ -25,6 +24,7 @@ build-licensight-scan-with-access-token:
   variables:
     GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
   script:
+    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan && chmod +x ./licensight-scan
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
   needs:
     - install-licensight-file
@@ -33,9 +33,8 @@ build-licensight-scan-with-access-token:
 
 build-licensight-scan-with-gat:
   stage: build
-  variables:
-    GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
   script:
+    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan && chmod +x ./licensight-scan
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
   needs:
     - install-licensight-file
