--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
 build-licensight-scan-without-access-token:
   stage: build
   script:
+    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan && chmod +x ./licensight-scan
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
@@ -22,6 +23,6 @@ build-licensight-scan-with-gat:
   stage: build
   script:
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/test/licensight-scan && chmod +x ./licensight-scan
-    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
+    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
