--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,6 @@ jobs:
           chmod +x ./licensight-scan
       - name: build-licensight-scan-without-access-token
         env:
-          GITHUB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ vars.GITLAB_ACCESS_TOKEN }}
         run: |
-          ./licensight-scan generate -d . -a ${{ secrets.PROJECT_NAME }} -e ${{ secrets.ENV }} -at ${{ secrets.SECRET_KEY }} -dpr -b $CI_COMMIT_REF_NAME
+          ./licensight-scan generate -d . -a ${{ vars.PROJECT_NAME }} -e ${{ vars.ENV }} -at ${{ vars.SECRET_KEY }} -dpr -b $CI_COMMIT_REF_NAME
