update github ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
   build-licensight-scan-with-access-token:
     runs-on: ubuntu-latest
+    environment: LICENSIGHT
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
