--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,18 @@
 			<artifactId>kafka-clients</artifactId>
 			<version>3.7.0</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
