--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ build-licensight-scan-without-access-token:
 build-licensight-scan-with-access-token:
   image: maven:3.8-openjdk-11
   stage: build
-  variables:
-    GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
+#  variables:
+#    GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
   script:
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
