--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Licensight scan for the Pull Request
         env:
-          GITHUB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
           chmod +x ./licensight-scan
