--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,31 @@
 stages:
   - build
+  - deploy
 
-build-licensight-scan-without-access-token:
-  image: maven:3.8-openjdk-11
-  stage: build
-  script:
-    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
-  rules:
-    - if: '$CI_MERGE_REQUEST_IID'
+#build-licensight-scan-without-access-token:
+#  image: maven:3.8-openjdk-11
+#  stage: build
+#  script:
+#    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
+#    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
+#  rules:
+#    - if: '$CI_MERGE_REQUEST_IID'
 
 build-licensight-scan-with-access-token:
-  image: maven:3.8-openjdk-11
-  stage: build
-#  variables:
-#    GITLAB_TOKEN: $GITLAB_ACCESS_TOKEN
+#  image: maven:3.8-openjdk-11
+  stage: deploy
   script:
+    - apt-get update && apt-get install -y curl maven
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
   rules:
     - if: '$CI_MERGE_REQUEST_IID'
 
-build-licensight-scan-with-gat:
-  image: maven:3.8-openjdk-11
-  stage: build
-  script:
-    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
-  rules:
-    - if: '$CI_MERGE_REQUEST_IID'
+#build-licensight-scan-with-gat:
+#  image: maven:3.8-openjdk-11
+#  stage: build
+#  script:
+#    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
+#    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
+#  rules:
+#    - if: '$CI_MERGE_REQUEST_IID'
