--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build-licensight-scan-with-access-token:
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
     - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
   rules:
-    - if: '$CI_MERGE_REQUEST_IID'
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
 
 #build-licensight-scan-with-gat:
 #  image: maven:3.8-openjdk-11
