--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 #  stage: build
 #  script:
 #    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-#    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
+#    - ./licensight-scan generate -d . -a $LICENSIGHT_APPLICATION_NAME -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -dpr -b $CI_COMMIT_REF_NAME
 #  rules:
 #    - if: '$CI_MERGE_REQUEST_IID'
 
@@ -16,7 +16,7 @@ build-licensight-scan-with-access-token:
   stage: licensight
   script:
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -b $CI_COMMIT_REF_NAME
+    - ./licensight-scan generate -d . -a $LICENSIGHT_APPLICATION_NAME -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -dpr -b $CI_COMMIT_REF_NAME
     - echo $CI_PIPELINE_SOURCE $CI_MERGE_REQUEST_IID
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
@@ -26,6 +26,6 @@ build-licensight-scan-with-access-token:
 #  stage: build
 #  script:
 #    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-#    - ./licensight-scan generate -d . -a $PROJECT_NAME -e $ENV -at $SECRET_KEY -dpr -gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
+#    - ./licensight-scan generate -d . -a $LICENSIGHT_APPLICATION_NAME -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -dpr -gat $GITLAB_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME
 #  rules:
 #    - if: '$CI_MERGE_REQUEST_IID'
