--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,16 @@
 stages:
-  - scan
+  - deploy
 
 licensight:
-  image: maven:3.8-openjdk-11
-  stage: scan
+  # adjust the stage if needed:
+  stage: deploy
+  # define an appropriate build base image in the step if needed:
+  # image: <image-name>
+  cache: {}
   script:
+    - apt-get update && apt-get install -y curl maven
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
     - ./licensight-scan generate -d . -a $LICENSIGHT_APPLICATION_NAME -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME -dpr
-    - echo $CI_PIPELINE_SOURCE $CI_MERGE_REQUEST_IID
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
 
