--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - '*'
 jobs:
+  debug:
+    steps:
+      echo ${{github.ref_name}} ${{github.event.repository.default_branch}}
   licensight:
     if: github.ref_name == github.event.repository.default_branch
     runs-on: ubuntu-latest
